# Back-end/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: 1.0.0
   title: comp9900
   description: comp9900
-host: "34.87.211.156"
+host: "13.55.8.94"
 basePath: "/"
 schemes:
  - https
@@ -20,6 +20,8 @@ tags:
   description: "everything about index"
 - name: "auth"
   description: "everything about auth"
+- name: "search"
+  description: "everything about search"
   
 paths:
   /login:
@@ -142,6 +144,28 @@ paths:
           description: "Bad request"
           schema:
             type: "string"
+    put:
+      tags:
+      - "image"
+      summary: "update image status"
+      description: "need JWT"
+      produces:
+      - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          schema:
+            type: "object"
+            properties:
+              "image_id":
+                type: "string"
+              "image_status":
+                type: "string"
+      responses:
+        "200":
+          description: "update success"
+          schema:
+            type: "string"
   /contributor:
     get:
       tags:
@@ -162,7 +186,6 @@ paths:
       tags:
       - "contributor"
       summary: "getContributorImage"
-      description: "need JWT"
       operationId: "getContributorImage"
       produces:
       - "application/json"
@@ -179,7 +202,7 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Image"
-  /index:
+  /index/image:
     get:
       tags:
       - "image"
@@ -194,7 +217,21 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Image"
-
+  /index/contributor:
+    get:
+      tags:
+      - "contributor"
+      summary: "get Index contributor"
+      operationId: "getIndexContributor"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/User"
   /explorerInfo:
     get:
       tags:
@@ -436,6 +473,30 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/User"
+  /user:
+    put:
+      tags:
+      - "explorer"
+      - "contributor"
+      summary: "update user detail"
+      produces:
+      - "application/json"
+      parameters: #path parameter
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: "object"
+            properties:
+              username:
+                type: "string"
+                description: "new username"
+              description:
+                type: "string"
+                description: "new description"
+      responses:
+        "200":
+          description: "successful operation"
   /explorer/shoppingcart:
     get:
       tags:
@@ -469,6 +530,95 @@ paths:
       responses:
         "200":
           description: "successful operation"
+  /search:
+    post:
+      tags:
+      - "search"
+      summary: "search"
+      description: "N"
+      operationId: "search"
+      parameters:
+        - in: "body"
+          name: "body"
+          schema:
+            type: "object"
+            properties:
+              "type":
+                type: "string"
+                enum:
+                - "contributor"
+                - "image"
+              "keyword":
+                type: "string"
+              "explorer_id":
+                type: "string"
+      responses:
+        "200":
+          description: "successfully login"
+          schema:
+            type: "object"
+            properties:
+              "search_type":
+                type: "string"
+              "result":
+                type: "array"
+                items:
+                  $ref: "#/definitions/Image"
+        "409":
+          description: "search type error"
+          schema:
+            type: "string"
+  /order:
+    post:
+      tags:
+      - "explorer"
+      summary: "post order"
+      produces:
+      - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          schema:
+            type: "object"
+            properties:
+              "image":
+                type: "array"
+                items:
+                  type: "string"
+                  example: "11111"
+                  description: "image id"
+      responses:
+        "200":
+          description: "successful operation"
+  /explorer/order:
+    get:
+      tags:
+      - "explorer"
+      summary: "get explorer order"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Image"
+              
+  /contributor/order:
+    get:
+      tags:
+      - "contributor"
+      summary: "get contributor order"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Image"
 definitions:
   Tag:
     type: "object"
@@ -497,6 +647,8 @@ definitions:
         enum:
         - "contributor"
         - "explorer"
+      image_num:
+        type: "string"
   UserRegister:
     type: "object"
     properties:
@@ -528,8 +680,8 @@ definitions:
       status:
         type: "string"
         enum: 
-        - "on shop"
-        - "off shop"
+        - "on_shop"
+        - "off_shop"
       tag:
         type: "string"
       image_name:
